fixed styling for completed, incomplete, and view all buttons when website is viewed on mobile

--- a/src/pages/todo.css
+++ b/src/pages/todo.css
@@ -132,3 +132,19 @@ li{
     border-radius:5px;
     min-width:75vw;
 }
+
+@media screen and (max-width: 450px){
+    #view{
+        background-color:#3F98FF;
+        color:white;
+        border:none;
+        border-radius:5px;
+        width:100%;
+        margin: 1%;
+        height:10%;
+        font-size:1rem;
+    }
+    
+
+
+}
